--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,8 +2,25 @@
 import "../styles/global.css";
 import Header from "../components/ui/Header.astro";
 import Footer from "../components/ui/Footer.astro";
----
 
-<Header />
-<slot />
-<Footer />
+interface Props {
+    title: string
+}
+
+const {title} = Astro.props
+
+---
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Cafetería desde 1939: {title}</title>
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" >
+    </head>
+    <body>
+        <Header />
+            <slot />
+        <Footer />
+    </body>
+</html>
