--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,23 +4,29 @@ import Header from "../components/ui/Header.astro";
 import Footer from "../components/ui/Footer.astro";
 
 interface Props {
-    title: string
+    title: string;
 }
 
-const {title} = Astro.props
-
+const { title } = Astro.props;
 ---
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="es">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Cafetería desde 1939: {title}</title>
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" >
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=PT+Sans:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <Header />
-            <slot />
+        <slot />
         <Footer />
     </body>
 </html>
