--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props;
             rel="stylesheet"
         />
     </head>
-    <body>
+    <body class="bg-coffee-100" >
         <Header />
         <slot />
         <Footer />
