feat(header): add complete header with nav

--- a/src/components/ui/Header.astro
+++ b/src/components/ui/Header.astro
@@ -1,1 +1,33 @@
-<h1>Header</h1>
+---
+import Logo from "@/assets/logo.svg";
+import MainNav from "./MainNav.astro";
+
+interface Props {
+    subtitle: string;
+    bgImage: string;
+}
+
+const { subtitle, bgImage } = Astro.props;
+---
+
+<header class="min-h-144 relative">
+    <div
+        class="absolute inset-0 bg-center bg-cover"
+        style={{ backgroundImage: `url(${bgImage})` }}
+    >
+    </div>
+
+    <div class="absolute inset-0 bg-black/60"></div>
+
+    <div class="relative max-w-7xl mx-auto py-3">
+        <div class="flex flex-col items-center lg:flex-row lg:justify-between">
+            <a href="/">
+                <Logo class="w-72" />
+            </a>
+            <MainNav />
+        </div>
+        <h1 class="text-4xl font-black uppercase text-white text-center mt-12">
+            {subtitle}
+        </h1>
+    </div>
+</header>
