--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,9 +5,11 @@ import Footer from "../components/ui/Footer.astro";
 
 interface Props {
     title: string;
+    subtitle: string;
+    bgImage: string;
 }
 
-const { title } = Astro.props;
+const { title, subtitle, bgImage } = Astro.props;
 ---
 
 <!doctype html>
@@ -24,8 +26,8 @@ const { title } = Astro.props;
             rel="stylesheet"
         />
     </head>
-    <body class="bg-coffee-100" >
-        <Header />
+    <body class="bg-coffee-100">
+        <Header subtitle={subtitle} bgImage={bgImage} />
         <slot />
         <Footer />
     </body>
