--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import bg from "../assets/bg_home.jpg";
 ---
 
-<Layout title="Inicio" >
+<Layout title="Inicio" subtitle="Disfruta una delicisioa taza de café" bgImage={bg.src} >
 	<h1>Home</h1>
 </Layout>
