--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -2,6 +2,6 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="nosotros">
+<Layout title="nosotros" subtitle="" bgImage="" >
     <h1>Nosotros</h1>
 </Layout>
