--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,12 @@ const { title, subtitle, bgImage } = Astro.props;
     </head>
     <body class="bg-coffee-100">
         <Header subtitle={subtitle} bgImage={bgImage} />
-        <slot />
+
+        <!-- <slot name="before-main-content" /> -->
+        <main class="bg-white p-20 max-w-7xl mx-auto lg:-mt-20 relative">
+            <slot />
+        </main>
+        <!-- <slot name="after-main-content" /> -->
         <Footer />
     </body>
 </html>
