--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,14 @@ import Layout from "../layouts/Layout.astro";
 import bg from "../assets/bg_home.jpg";
 ---
 
-<Layout title="Inicio" subtitle="Disfruta una delicisioa taza de café" bgImage={bg.src} >
-	<h1>Home</h1>
+<Layout
+	title="Inicio"
+	subtitle="Disfruta una delicisioa taza de café"
+	bgImage={bg.src}
+>
+	<!-- <section slot="before-main-content">Galería</section> -->
+
+	<h1>Inicio</h1>
+
+	<!-- <section slot="after-main-content">Promociones</section> -->
 </Layout>
