--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,16 @@ import bg from "../assets/bg_home.jpg";
 	subtitle="Disfruta una delicisioa taza de café"
 	bgImage={bg.src}
 >
-	<!-- <section slot="before-main-content">Galería</section> -->
+	<h2 class="text-coffee-400 text-center font-black text-lg uppercase">
+		Conoce más
+		<p class="block text-4xl text-coffee-900">Sobre nosotros</p>
+	</h2>
 
-	<h1>Inicio</h1>
+	<p class="text-center text-lg mt-10">
+		Desde 1939, nuestra cafetería ha sido un rincón acogedor donde el buen café y la comida hecha con cariño son protagonistas. Aquí no solo vienes a disfrutar de una bebida: vienes a saborear el resultado de décadas de dedicación, recetas caseras y una selección cuidadosa de ingredientes frescos y de calidad.
+	</p>
 
-	<!-- <section slot="after-main-content">Promociones</section> -->
+	<p class="text-center text-lg mt-10">
+		En cada plato y en cada taza encontrarás el equilibrio perfecto entre tradición y sabor. Desde nuestro café artesanal hasta nuestros desayunos, almuerzos y repostería, todo está preparado con productos naturales, sin atajos ni artificios.
+	</p>
 </Layout>
