style(tailwind): add custom utility class

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,9 @@ import bg from "../assets/bg_home.jpg";
 	subtitle="Disfruta una delicisioa taza de café"
 	bgImage={bg.src}
 >
-	<h2 class="text-coffee-400 text-center font-black text-lg uppercase">
+	<h2 class="text-coffee-400 text-center font-black text-lg uppercase after:coffee-icon">
 		Conoce más
-		<p class="block text-4xl text-coffee-900">Sobre nosotros</p>
+		<span class="block text-4xl text-coffee-900">Sobre nosotros</span>
 	</h2>
 
 	<p class="text-center text-lg mt-10">
