--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import bg from "../assets/bg_home.jpg";
+import CategoryIconLabel from "@/components/ui/CategoryIconLabel.astro";
 ---
 
 <Layout
@@ -8,16 +9,31 @@ import bg from "../assets/bg_home.jpg";
 	subtitle="Disfruta una delicisioa taza de café"
 	bgImage={bg.src}
 >
-	<h2 class="text-coffee-400 text-center font-black text-lg uppercase after:coffee-icon">
+	<h2
+		class="text-coffee-400 text-center font-black text-lg uppercase after:coffee-icon"
+	>
 		Conoce más
 		<span class="block text-4xl text-coffee-900">Sobre nosotros</span>
 	</h2>
 
 	<p class="text-center text-lg mt-10">
-		Desde 1939, nuestra cafetería ha sido un rincón acogedor donde el buen café y la comida hecha con cariño son protagonistas. Aquí no solo vienes a disfrutar de una bebida: vienes a saborear el resultado de décadas de dedicación, recetas caseras y una selección cuidadosa de ingredientes frescos y de calidad.
+		Desde 1939, nuestra cafetería ha sido un rincón acogedor donde el buen
+		café y la comida hecha con cariño son protagonistas. Aquí no solo vienes
+		a disfrutar de una bebida: vienes a saborear el resultado de décadas de
+		dedicación, recetas caseras y una selección cuidadosa de ingredientes
+		frescos y de calidad.
 	</p>
 
 	<p class="text-center text-lg mt-10">
-		En cada plato y en cada taza encontrarás el equilibrio perfecto entre tradición y sabor. Desde nuestro café artesanal hasta nuestros desayunos, almuerzos y repostería, todo está preparado con productos naturales, sin atajos ni artificios.
+		En cada plato y en cada taza encontrarás el equilibrio perfecto entre
+		tradición y sabor. Desde nuestro café artesanal hasta nuestros
+		desayunos, almuerzos y repostería, todo está preparado con productos
+		naturales, sin atajos ni artificios.
 	</p>
+
+	<div class="grid grid-cols-1 lg:grid-cols-3 gap-5" >
+		<CategoryIconLabel icon="icon_coffee.svg" text="Café" />
+		<CategoryIconLabel icon="icon_dessert.svg" text="Postres" />
+		<CategoryIconLabel icon="icon_tea.svg" text="Té" />
+	</div>
 </Layout>
