--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -6,9 +6,10 @@ const baseUrl = import.meta.env.WP_API_URL
 const response = await fetch(`${baseUrl}/pages?slug=nosotros`)
 const json = await response.json()
 const data = BaseWPSchema.parse(json[0])
-console.log(data)
 ---
 
-<Layout title="nosotros" subtitle="" bgImage="" >
-    <h1>Nosotros</h1>
+<Layout title={data.title.rendered} subtitle={data.acf.subtitle} bgImage={data.featured_images.medium_large.url} >
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-10" >
+        <div class="text-xl space-y-3 mt-10 lg:mt-0" set:html={data.content.rendered}></div>
+    </div>
 </Layout>
