feat(lib): add centralized WordPress REST API client

--- a/src/pages/nosotros.astro
+++ b/src/pages/nosotros.astro
@@ -1,23 +1,20 @@
 ---
 import Layout from "@/layouts/Layout.astro"
-import { BaseWPSchema } from "@/types"
 import { Picture } from "astro:assets"
 
-const baseUrl = import.meta.env.WP_API_URL
-const response = await fetch(`${baseUrl}/pages?slug=nosotros`)
-const json = await response.json()
-const data = BaseWPSchema.parse(json[0])
+import { getPageNosotros } from "@/lib/wp"
+const { pageTitle, subtitle, image, content} = await getPageNosotros(); 
 ---
 
-<Layout title={data.title.rendered} subtitle={data.acf.subtitle} bgImage={data.featured_images.medium_large.url} >
+<Layout title={pageTitle} subtitle={subtitle} bgImage={image.url} >
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-10" >
         <Picture 
-            src={data.featured_images.medium_large.url}
-            alt={`Image de ${data.title.rendered}`}
-            width={data.featured_images.medium_large.width}
-            height={data.featured_images.medium_large.height}
+            src={image.url}
+            alt={`Image de ${pageTitle}`}
+            width={image.width}
+            height={image.height}
             formats={['avif', 'webp']}
         />
-        <div class="text-xl space-y-3 mt-10 lg:mt-0" set:html={data.content.rendered}></div>
+        <div class="text-xl space-y-3 mt-10 lg:mt-0" set:html={content}></div>
     </div>
 </Layout>
