--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
-import "../styles/global.css";
-import Header from "../components/ui/Header.astro";
-import Footer from "../components/ui/Footer.astro";
+import "@/styles/global.css";
+import Header from "@/components/ui/Header.astro";
+import Footer from "@/components/ui/Footer.astro";
 
 interface Props {
     title: string;
@@ -31,7 +31,11 @@ const { title, subtitle, bgImage } = Astro.props;
 
         <!-- <slot name="before-main-content" /> -->
         <main class="bg-white p-20 max-w-7xl mx-auto lg:-mt-20 relative">
-            <h2 class="text-coffee-900 font-black text-center text-4xl pb-10 uppercase after:coffee-icon">{title}</h2>
+            <h2
+                class="text-coffee-900 font-black text-center text-4xl pb-10 uppercase after:coffee-icon"
+            >
+                {title}
+            </h2>
             <slot />
         </main>
         <!-- <slot name="after-main-content" /> -->
