--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import bg from "../assets/bg_home.jpg";
+import Layout from "@/layouts/Layout.astro";
+import bg from "@/assets/bg_home.jpg";
 import CategoryIconLabel from "@/components/ui/CategoryIconLabel.astro";
 ---
 
@@ -31,7 +31,7 @@ import CategoryIconLabel from "@/components/ui/CategoryIconLabel.astro";
 		naturales, sin atajos ni artificios.
 	</p>
 
-	<div class="grid grid-cols-1 lg:grid-cols-3 gap-5" >
+	<div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
 		<CategoryIconLabel icon="icon_coffee.svg" text="Café" />
 		<CategoryIconLabel icon="icon_dessert.svg" text="Postres" />
 		<CategoryIconLabel icon="icon_tea.svg" text="Té" />
