--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,9 @@ const { title, subtitle, bgImage } = Astro.props;
         <Header subtitle={subtitle} bgImage={bgImage} />
 
         <!-- <slot name="before-main-content" /> -->
-        <main class="bg-white p-20 max-w-7xl mx-auto lg:-mt-20 relative">
+        <main
+            class="bg-white p-10 lg:p-20 max-w-7xl mx-auto lg:-mt-20 relative"
+        >
             <h2
                 class="text-coffee-900 font-black text-center text-4xl pb-10 uppercase after:coffee-icon"
             >
