--- a/src/components/blog/PostCard.astro
+++ b/src/components/blog/PostCard.astro
@@ -1,7 +1,7 @@
 ---
 import type { Post } from "@/types";
 import { Picture } from "astro:assets";
-import { formatDate } from "@/helpers"
+import { formatDate } from "@/helpers";
 
 interface Props {
     post: Post;
@@ -20,9 +20,21 @@ const { post } = Astro.props;
             </a>
         </h3>
         <p>
-            Escrito el: <span class="text-coffee-600">{formatDate(post.date)}</span>
+            Escrito el: <span class="text-coffee-600"
+                >{formatDate(post.date)}</span
+            >
         </p>
-        <div set:html={post.content.rendered} class="line-clamp-2" />
+        {
+            post.category_details.map((category) => (
+                <a
+                    href=""
+                    class="inline-block py-1 px-5 bg-coffee-600 text-sm text-white mr-2 rounded"
+                >
+                    {category.name}
+                </a>
+            ))
+        }
+        <div set:html={post.content.rendered} class="line-clamp-2 text-lg" />
     </div>
 
     <Picture
