--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,5 +1,39 @@
 ---
-export const prerender = false
+import PostCategories from "@/components/blog/PostCategories.astro";
+import PostMeta from "@/components/blog/PostMeta.astro";
+import Layout from "@/layouts/Layout.astro";
+import { getPost } from "@/lib/wp";
+import { Picture } from "astro:assets";
 
+export const prerender = false;
+
+const { slug } = Astro.params;
+const post = await getPost(slug);
 ---
-<h1>Hola desde el post</h1>
+
+<Layout
+    title={post.title.rendered}
+    subtitle={post.title.rendered}
+    bgImage={post.featured_images.medium_large.url}
+>
+    <article class="space-y-5 max-w-4xl mx-auto">
+        <PostMeta date={post.date} />
+        {
+            post.category_details.map((category) => (
+                <PostCategories name={category.name} />
+            ))
+        }
+        <Picture
+            src={post.featured_images.medium_large.url}
+            alt={`Imagen del Post: ${post.title.rendered}`}
+            width={post.featured_images.medium_large.width}
+            height={post.featured_images.medium_large.height}
+            class="w-full"
+        />
+
+        <div
+            set:html={post.content.rendered}
+            class="text-lg space-y-3 mt-5 text-pretty"
+        />
+    </article>
+</Layout>
