feat(blog): add dynamic routes for categories using getStaticPaths

--- a/src/components/blog/PostCard.astro
+++ b/src/components/blog/PostCard.astro
@@ -23,7 +23,7 @@ const { post } = Astro.props;
         <PostMeta date={post.date}/>
         {
             post.category_details.map((category) => (
-             <PostCategories name={category.name} />
+             <PostCategories name={category.name} slug={category.slug} />
             ))
         }
         <div set:html={post.content.rendered} class="line-clamp-2 text-lg" />
