--- a/src/components/galery/GalleryGrid.astro
+++ b/src/components/galery/GalleryGrid.astro
@@ -9,16 +9,35 @@ interface Props {
 const { gallery } = Astro.props;
 ---
 
-<div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
+<div id="gallery" class="grid grid-cols-1 lg:grid-cols-3 gap-5">
     {
         gallery.map((image) => (
-            <Picture
-                src={image.large.url}
-                alt="Image de la galería"
-                width={image.large.width}
-                height={image.large.height}
-                formats={["avif", "webp"]}
-            />
+            <a
+                href={image.full.url}
+                data-pswp-width={image.full.width}
+                data-pswp-height={image.full.height}
+                target="_blank"
+            >
+                <Picture
+                    src={image.large.url}
+                    alt="Image de la galería"
+                    width={image.large.width}
+                    height={image.large.height}
+                    formats={["avif", "webp"]}
+                />
+            </a>
         ))
     }
 </div>
+
+<script>
+    import PhotoSwipeLightbox from "photoswipe/lightbox";
+    import "photoswipe/style.css";
+
+    const lightbox = new PhotoSwipeLightbox({
+        gallery: "#gallery",
+        children: "a",
+        pswpModule: () => import("photoswipe"),
+    });
+    lightbox.init();
+</script>
