feat(menu): add Menu page with basic data

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,7 +40,7 @@ const { title, subtitle, bgImage } = Astro.props;
             </h2>
             <slot />
         </main>
-        <!-- <slot name="after-main-content" /> -->
+        <slot name="after-main-content" />
         <Footer />
     </body>
 </html>
