--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,3 +35,7 @@
 @utility font-secondary {
     font-family: "PT Sans", sans-serif;
 }
+
+@utility bg-menu-image {
+    background-image: url("../assets/menu_artwork.svg");
+}
