feat(menu): display drinks info in MenuItem component

--- a/src/components/menu/CoffeeMenu.astro
+++ b/src/components/menu/CoffeeMenu.astro
@@ -1,13 +1,24 @@
 ---
-import { getMenuItems } from "@/lib/wp"
+import { getMenuItems } from "@/lib/wp";
+import MenuItem from "./MenuItem.astro";
 
-
-const products = await getMenuItems(6)
+const products = await getMenuItems(6);
 ---
 
 <div>
-    <h4 class="text-white font-black text-4xl uppercase text-center my-10">Café</h4>
-    <ul class="space-y-3" >
-        
+    <h4 class="text-white font-black text-4xl uppercase text-center my-10">
+        Café
+    </h4>
+    <ul class="space-y-3">
+        {
+            products.map((product) => (
+                <MenuItem
+                    title={product.title.rendered}
+                    description={product.acf.description}
+                    image={product.featured_images}
+                    price={product.acf.price}
+                />
+            ))
+        }
     </ul>
 </div>
